Workaround for profile image not loading

--- a/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/DeveloperTemplate.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/DataTemplates/DeveloperTemplate.xaml
@@ -196,8 +196,9 @@
                     <!--Image-->
                     <controls:ImageEx
                         Height="56" Width="56"
-                        VerticalAlignment="Center" HorizontalAlignment="Center"
-                        IsCacheEnabled="True"
+                        VerticalAlignment="Center"
+                        HorizontalAlignment="Center"
+                        IsCacheEnabled="False"
                         Source="{x:Bind ViewModel.ProfileImageUrl}"
                         Stretch="UniformToFill"
                         ImageExOpened="ImageExBase_OnImageExOpened"
