Switched to IRecipient<T> in views

--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -94,7 +94,7 @@
                             <inputPanel:VirtualKeyboard/>
                         </PivotItem>
                         <PivotItem>
-                            <inputPanel:CompactMemoryViewer/>
+                            <inputPanel:CompactMemoryViewer attachedProperties:ObservableRecipientHelper.IsActive="{x:Bind StdinHeader.StdinSelectedIndex.Equals(1), Mode=OneWay}"/>
                         </PivotItem>
                     </controls:LockedPivot>
                 </controls:ExpanderControl.ExpandableContent>
