--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
@@ -48,7 +48,7 @@
                             FontWeight="SemiBold"
                             FontSize="14"/>
                         <Run 
-                            Text="{x:Bind helpers:PackageVersionHelper.ToFormattedString(helpers:SystemInformation.ApplicationVersion)}"
+                            Text="{x:Bind helpers:PackageVersionHelper.ToFormattedString(helpers:SystemInformation.Instance.ApplicationVersion)}"
                             FontSize="15"
                             FontWeight="SemiBold"
                             FontFamily="Consolas"/>
