--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -117,7 +117,7 @@
                     x:Uid="Settings/BracketsOnNewLine"
                     Margin="0,8,0,0"
                     TextWrapping="Wrap"
-                    Text="Brackets on new line"/>
+                    Text="Brackets position"/>
                 <controls:ComboBoxWithNoScrollWheelSupport
                     CornerRadius="0"
                     Margin="0,4,0,0"
