Added build configuration info to about page

--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/AboutSubPage.xaml
@@ -58,6 +58,12 @@
                             FontSize="15"
                             FontWeight="SemiBold"
                             FontFamily="Consolas"/>
+                        <Run Text="|"/>
+                        <Run 
+                            Text="{x:Bind ViewModel.BuildConfiguration}"
+                            FontSize="15"
+                            FontWeight="SemiBold"
+                            FontFamily="Consolas"/>
                 </TextBlock>
 
                 <!--Git branch-->
