--- a/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/SubPages/Shell/Settings/SettingsSubPage.xaml
@@ -9,7 +9,6 @@
     xmlns:jumpList="using:Brainf_ckSharp.Uwp.Controls.DataTemplates.JumpList"
     xmlns:templateSelectors="using:Brainf_ckSharp.Uwp.TemplateSelectors"
     xmlns:collections="using:Microsoft.Toolkit.Collections"
-    xmlns:markupExtensions="using:Brainf_ckSharp.Uwp.MarkupExtensions"
     xmlns:interpreterEnums="using:Brainf_ckSharp.Enums"
     xmlns:enums="using:Brainf_ckSharp.Shared.Enums"
     xmlns:enumsSettings="using:Brainf_ckSharp.Shared.Enums.Settings"
@@ -21,6 +20,7 @@
     xmlns:core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:controls="using:Brainf_ckSharp.Uwp.Controls.Windows.UI.Xaml.Controls"
     xmlns:sections="using:Brainf_ckSharp.Shared.ViewModels.Controls.SubPages.Settings.Sections"
+    xmlns:markupExtensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
