Refactored stdin parameter to ReadOnlyMemory<char>

--- a/src/Brainf_ckSharp/Configurations/Configuration.tt
+++ b/src/Brainf_ckSharp/Configurations/Configuration.tt
@@ -28,7 +28,7 @@ foreach (var name in names)
         /// <summary>
         /// The (optional) stdin buffer to use to run the script
         /// </summary>
-        public readonly string? Stdin;
+        public readonly ReadOnlyMemory<char>? Stdin;
 
         /// <summary>
         /// The (optional) initial machine state to use to execute the script
