--- a/src/Brainf_ckSharp/Configurations/Extensions/ConfigurationExtensions.tt
+++ b/src/Brainf_ckSharp/Configurations/Extensions/ConfigurationExtensions.tt
@@ -63,6 +63,21 @@ foreach (var name in names)
         [MethodImpl(MethodImplOptions.AggressiveInlining)]
         public static ref readonly <#=name#>Configuration WithStdin(in this <#=name#>Configuration configuration, string stdin)
         {
+            Unsafe.AsRef(configuration.Stdin) = stdin.AsMemory();
+            
+            return ref configuration;
+        }
+
+        /// <summary>
+        /// Sets the stdin buffer to read for a given configuration
+        /// </summary>
+        /// <param name="configuration">The input <see cref="<#=name#>Configuration"/> instance</param>
+        /// <param name="stdin">The input buffer to read data from</param>
+        /// <returns>The input <see cref="<#=name#>Configuration"/> instance</returns>
+        [Pure]
+        [MethodImpl(MethodImplOptions.AggressiveInlining)]
+        public static ref readonly <#=name#>Configuration WithStdin(in this <#=name#>Configuration configuration, ReadOnlyMemory<char> stdin)
+        {
             Unsafe.AsRef(configuration.Stdin) = stdin;
             
             return ref configuration;
