--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Header/HeaderPanel.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Header/HeaderPanel.xaml
@@ -59,7 +59,7 @@
             Width="80"
             Grid.Column="1"
             IsSelected="{x:Bind converters:PivotSelectionConverter.ConvertIndexToBool(SelectedIndex, 1), Mode=OneWay}"
-            Selected="IDEHeaderSelected"/>
+            Selected="IdeHeaderSelected"/>
 
         <!--Selection rectangle-->
         <Rectangle
